Fixed footer text-align CSS selection Had some confusion about the :nth-child selector

--- a/_sass/dark-minimal/_base.sass
+++ b/_sass/dark-minimal/_base.sass
@@ -34,7 +34,7 @@ footer
   i
     margin-left: 0 !important
   @media(min-width:640px)
-    &:nth-child(2)
+    p:nth-child(2)
       text-align: right
 
 h1, h2, h3, h4, h5, h6
